--- a/eas.json
+++ b/eas.json
@@ -1,21 +1,27 @@
 {
-  "cli": {
-    "version": ">= 12.6.2",
-    "appVersionSource": "remote"
-  },
-  "build": {
-    "development": {
-      "developmentClient": true,
-      "distribution": "internal"
-    },
-    "preview": {
-      "distribution": "internal"
-    },
-    "production": {
-      "autoIncrement": true
-    }
-  },
-  "submit": {
-    "production": {}
-  }
+	"cli": {
+		"version": ">= 12.6.2",
+		"appVersionSource": "remote"
+	},
+	"build": {
+		"internal": {
+			"distribution": "internal",
+			"android": {
+				"buildType": "app-bundle"
+			}
+		},
+		"development": {
+			"developmentClient": true,
+			"distribution": "internal"
+		},
+		"preview": {
+			"distribution": "internal"
+		},
+		"production": {
+			"autoIncrement": true
+		}
+	},
+	"submit": {
+		"production": {}
+	}
 }
