--- a/eas.json
+++ b/eas.json
@@ -4,6 +4,11 @@
 		"appVersionSource": "remote"
 	},
 	"build": {
+		"apk": {
+			"android": {
+				"buildType": "apk"
+			}
+		},
 		"internal": {
 			"distribution": "internal",
 			"android": {
