--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-# EXPO_PUBLIC_DASHBOARD_URL=http://192.168.60.126:3000
-EXPO_PUBLIC_DASHBOARD_URL=https://college-project-nu-silk.vercel.app
+EXPO_PUBLIC_DASHBOARD_URL=http://192.168.60.90:3000
+# EXPO_PUBLIC_DASHBOARD_URL=https://college-project-nu-silk.vercel.app
